# 2m

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
test_project/: main.py  models.py  procedures.py  settings.env  tests.py
two_m/: exceptions.py  main.py  models.py  orm.py  settings.env  tests.py
two_m/dill/: serde.py
two_m/flasksqlalchemy/: adapter.py
two_m/install/: install.py  requirements.txt
two_m/src/two_m/: conf.py  datatype.py  orm.py  setup.py
two_m/src/two_m/flasksqlalchemy/: adapter.py
two_m/src/two_m/install/: install.py
two_m/src/two_m/templates/: database.env  main.py  models.py  procedures.py
two_m/templates/: main.py  models.py  procedures.py  settings.env
two_m/test_project/: database.env  models.py  procedures.py  tests.py
two_m_root/: conf.py  datatype.py  exceptions.py  orm.py
two_m_root/database/postgres/: exceptions.py
two_m_root/flasksqlalchemy/: adapter.py
two_m_root/install/: install.py  requirements.txt
two_m_root/templates/: main.py  models.py  procedures.py
