[build-system]
requires = [
    "setuptools >= 77.0.3"
    ]
build-backend = "setuptools.build_meta"
[project]
name = "two_m"
version = "1.0.0"
authors = [
  { name="Victor Litovchenko", email="filpsixi@mail.ru" },
]
description = "A small package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
[tool.setuptools]
packages = ["two_m"]
[project.urls]
Homepage = "https://github.com/filthps/2m"
Issues = "https://github.com/filthps/2m/issues"
